updated the codes

--- a/homework_regform.html
+++ b/homework_regform.html
@@ -14,7 +14,7 @@
   </head>
   
   <body>
-      <form action="homework_addform.php" method="post" enctype="multipart/form-data" >
+      <form action="homework_addform_protect.php" method="post" enctype="multipart/form-data" >
           <div class="my-form">
               <div class="text">
                   <p>Choose your <strong>Username</strong> and <strong>Password</strong> below</p>
